+ Reduced the cost of Blink (the teleport) from 25 to 15 to give you more reason to use it
& Fixed bug where changing characters during static mode stopped energy gain until you switch back to Fark
+ Increased visible distance of exploration medals
+ Changed description of Mastery difficulty on save file create screen
& Fixed bug where difficulty on save slot menu might say "casual/casual"
& Fixed bug where difficulty didn't correctly display on world map pause menu

AREA 1 FINISHED

The following stages have new speed targets:
Alpine Carrera
Doublemoon Villa
High Rise Tracks
Cold Dry Desert
A.M. Village
Saw Man
Slope Jumping (tutorial)
Jester Dash (tutorial)
Charged Jester Dash (tutorial)

The following stages have new score targets:
Doublemoon Villa
High Rise Tracks

The following stages have some exploration medals moved:
Doublemoon Villa

Release 0.3.0 [Pending]
+ Split Final Utopia into 4 separate levels (1 stage, 3 boss fights) that are treated like normal levels, with a best time saved for each (no medals yet).
	Unlocked after beating the "normal" Final Utopia.
& Fixed a bug where Motorhead enemies would not die in one uncharged Charge Blast shot from Spark
+ Nerfed Magnet Dash's maximum effectiveness while making it more consistent in effectiveness when used at high speeds
+ Fixed bug where Fark and Reaper Jester could dash through certain barriers
+ Moved tips and hints to 2 unique menus in Shopalo's shop
& Fixed bug that caused bosses to not behave correctly - some attacks bosses were canceling should now work properly
+ New, more accurate combo meter multiplier UI

The following stages have new speed targets:
Lost Riviera
Lost Ravine
Beatdown Tower
Arid Hole
Splash Grotto
High Speeds (tutorial)
Wall Jump (tutorial)
Wall Walking (tutorial)

The following stages have new score targets:
Lost Riviera
Lost Ravine
Canyon Zero

The following stages have some exploration medals moved:
Lost Riviera
Lost Ravine